# advent-of-code

./: .dir-locals.el  .editorconfig  .envrc  .gitattributes  .gitignore  .hlint.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  ChangeLog.md  Day1.idr  LICENSE  Makefile  PackageInfo.g  README.md  Setup.hs  VERSION  advent.cabal  advent.ipkg  default.nix  emacs.el  flake.nix  init.g  makedoc.g  package.yaml  read.g  rebar.config  release.nix  shell.nix
.github/workflows/: build.yml
_src/2015/day/: 25.nw
_src/2015/haskell/: 25.nw
_src/2018/day/: 01.nw  02.nw  05.nw
_src/2018/haskell/: 01.nw  02.nw  05.nw
_src/2019/day/: 01.nw  04.nw  08.nw
_src/2019/gap/: 01.nw
_src/2019/haskell/: 04.nw  08.nw
_src/2021/day/: 01.nw  02.nw
_src/2021/haskell/: 01.nw  02.nw
_src/day/: 03.nw  08.nw
_src/day/2021/: 02.nw
_src/gap/: 01.nw
_src/haskell/: 02.nw  08.nw  Util.nw
_src/haskell/2018/: 01.nw  02.nw
_src/haskell/2019/: 04.nw  08.nw
_src/haskell/2021/: 02.nw
_src/tex/: 2015.tex  2018.tex  2019.tex  2021.tex  allcode.tex  aoc.tex  preamble.tex
advent_of_code/: advent_of_code.opam  dune-project
advent_of_code/lib/: day01.ml  dune  parse.ml  parse.mli
advent_of_code/lib/year2022/: day01.mli  dune
advent_of_code/test/: dune
app/day01/: Main.hs
app/day02/: Main.hs
app/day03/: Main.hs
app/day04/: Main.hs
app/day05/: Main.hs
gap/: AoC.gd  AoC.gi
gap/Year2019/: Day01.g
input/2018/: day04.txt
input/2019/: day01.txt
lib/: Day01.g
nix/: default.nix  emacs.nix  haskell.nix  noweb.nix  ocaml.nix  overlay.nix  sources.json
output/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt
output/2016/: day03.txt  day04.txt  day05.txt  day07.txt  day08.txt  day09.txt
output/2018/: day02.txt  day03.txt  day04.txt
src/: .dir-locals.el  .gitignore  2015-day09.pi  2015-day09.py  Day01.hs  Day01.nw  Day02.hs  Day03.hs  Day04.hs  Day05.lhs  Day05.md  Makefile  Util.hs  Util.nw  advent-of-lfe.app.src  advent.tex  all.tex  book.tex  day01.lfe  day02.lfe  day03.lfe  day04.lfe  day05-part1.lfe  latexmkrc  pandoc-minted.py  preamble.tex
src/AdventOfCode/: Input.hs  Puzzle.hs  SimplePuzzle.hs  TH.hs  Util.hs
src/AdventOfCode/Year2015/: Day01.hs  Day02.hs  Day06.hs  Day07.hs  Day08.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/AdventOfCode/Year2016/: Day05.hs  Day12.hs  Day14.hs
src/Data/: Digraph.hs  Ix.idr  Ix.lidr
src/day/: 01.nw  02.nw  04.nw
src/haskell/: 04.nw
src/tex/: allcode.tex  aoc.tex
test/: unit-day01-tests.lfe  unit-day02-tests.lfe  unit-day03-tests.lfe  unit-day04-tests.lfe  unit-day05-part1-tests.lfe
tst/: testall.g
(+137 files in other folders)
