name:                advent
version:             0.1.0.0
synopsis:            Solutions to the 2016 Advent of Code.
description:         Please see README.md
homepage:            https://github.com/yurrriq/advent-of-idris
license:             MIT
license-file:        LICENSE
author:              Eric Bailey
maintainer:          eric@ericb.me
copyright:           Copyright: (c) 2016 Eric Bailey
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Advent.Day05
  build-depends:       base       >= 4.7    && < 5
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.7  && < 0.5.8
                     , cryptonite >= 0.19   && < 0.20
                     , memory     >= 0.13   && < 0.20
  default-language:    Haskell2010

executable day05
  hs-source-dirs:      src/Data/Advent/Day05
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
  default-language:    Haskell2010

-- test-suite advent-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , advent
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yurrriq/advent-of-idris
