(lang dune 3.6)

(name advent_of_code)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name advent_of_code)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
   angstrom
   core
   dune
   ocaml)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
