(lang dune 3.6)

(name advent_of_code)
(version 0.0.1)

(generate_opam_files true)

(source (github yurrriq/advent-of-code))

(authors "Eric Bailey")

(maintainers "Eric Bailey")

(license MIT)

; (documentation https://yurrriq.github.io/advent-of-code/ocaml)

(package
 (name advent_of_code)
 (synopsis "Advent of Code")
 ; (description "A longer description")
 (depends
   angstrom
   core
   dune
   ocaml)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
